Fixed some basic layout issues

--- a/FrontEnd/Static/landing.css
+++ b/FrontEnd/Static/landing.css
@@ -221,7 +221,7 @@ body {
     line-height: 1.6;
     color: var(--text-dark);
     overflow-x: hidden;
-    background: radial-gradient(circle, rgba(2,0,36,0.7540266106442577) 0%, rgba(0,212,255,0.1517857142857143) 100%);
+    background: radial-gradient(circle, rgba(111, 107, 177, 0.754) 0%, rgba(0,212,255,0.1517857142857143) 100%);
 }
 
 /* Animations */
